<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flower World</string>
    <string name="appreciate_archiver_title">归档</string>
    <string-array name="tab_text">
        <item>花界•欣赏美花</item>
        <item>花界•评花论花</item>
        <item>花界•亮眼识花</item>
        <item>我的收藏</item>
        <item>设置</item>
    </string-array>

    <string name="appreciate_search_text">搜索</string>
    <string name="appreciate_search_tip">请输入你要搜索的关键字</string>
    <string name="appreciate_search_empty">输入为空,请输入你要搜素的关键字.</string>
    <string name="appreciate_search_too_wide">你要搜索的内容太广，请重新搜素.</string>
    <string name="appreciate_search_wide_word">花|的|</string>

    <string name="favorite">收藏</string>
    <string name="unfavorite">删除收藏</string>
    <string name="favorite_add">收藏成功.</string>
    <string name="favorite_del">删除收藏.</string>

    <string name="favorite_category_picture">图片</string>
    <string name="favorite_category_article">文章</string>

    <string name="latest_title">最新图片</string>
    <string name="category_title">分类图片</string>
    <string name="search_title">搜索</string>
    <string name="company_title">合作</string>
    <string name="discuss_details_title">正文</string>
    <string name="setting_about_title">关于</string>

    <string name="share_pic_title">《%s》分享来自《花界》最新精美图片</string>
    <string name="share_pic_text">#花界#《%s》分享来自《@huajie_mobile》最新精美图片</string>
    <string name="share_pic_no_data">未找到图片文件，请退出后重新打开再试.</string>
    <string name="share_pic_no_sdcard">未找到SD卡，无法分享.</string>
    <string name="share_article_title">《%s》分享来自《花界》最新评花文章</string>
    <string name="share_article_text">#花界#《%s》分享来自《@huajie_mobile》最新评花文章</string>

    <string name="ad_company_name">店名:</string>
    <string name="ad_company_contact">联系人:</string>
    <string name="ad_company_address">地址:</string>
    <string name="ad_company_tel">联系电话:</string>
    <string name="ad_company_phone">手机:</string>
    <string name="ad_company_business">业务:</string>

    <string name="company_note_details">"       感谢以下网站和花店的友情支持！\n       只要为我们提供过图片,可自拍,网上搜索,即可与我达成合作关系,我们将在软件中免费宣传,诚邀养花网站,养花论坛,花店,养花爱好者等合作！"</string>
    <string name="company_note_contact">"       联系人:冯先生"</string>
    <string name="company_note_tel">联系电话:</string>
    <string name="company_note_tel_number">15800413861</string>

    <string name="setting_share_app_title">分享应用</string>
    <string name="setting_share_app_subject">向你分享一个精彩应用《花界》</string>
    <string name="setting_share_app_body">向你分享一个精彩应用《花界》,看最新高清花图，学习养花知识，教你赏花，下载地址:</string>
    <string name="setting_feedback_mail">673592063@qq.com</string>
    <string name="setting_feedback_title">意见反馈</string>
    <string name="setting_feedback_subject">《花界》意见箱</string>
    <string name="setting_contact_smsto">"smsto:15800413861"</string>
    <string name="setting_contact_tel">"tel:15800413861"</string>
</resources>
